packages/astro/e2e/fixtures/errors/src/pages/astro-hydration-error.astro
---
import SvelteDirectiveError from '../components/SvelteDirectiveError.svelte';
---

<div>
  <SvelteDirectiveError client:loadm />
</div>